# serializer version: 1
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_direct_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_direct_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Direct mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Direct mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'direct_mode',
    'unique_id': '456789abcdef-1-direct_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_direct_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Direct mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_direct_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_dolby_pliix_panorama-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_dolby_pliix_panorama',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby PLIIx panorama',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby PLIIx panorama',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_pliix_panorama',
    'unique_id': '456789abcdef-1-dolby_pliix_panorama',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_dolby_pliix_panorama-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dolby PLIIx panorama',
    }),
    'context': <ANY>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_dolby_pliix_panorama',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_headphone_override-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_headphone_override',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headphone override',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headphone override',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headphones_override',
    'unique_id': '456789abcdef-1-headphones_override',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_headphone_override-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Headphone override',
    }),
    'context': <ANY>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_headphone_override',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_zone_1_osd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_zone_1_osd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 1 OSD',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 1 OSD',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'zone_1_osd',
    'unique_id': '456789abcdef-1-zone_1_osd',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_zone_1_osd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 1 OSD',
    }),
    'context': <ANY>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_zone_1_osd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_zone_2_headphone_override-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_zone_2_headphone_override',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headphone override',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headphone override',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headphones_override',
    'unique_id': '456789abcdef-2-headphones_override',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][switch.arcam_fmj_127_0_0_1_zone_2_headphone_override-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Headphone override',
    }),
    'context': <ANY>,
    'entity_id': 'switch.arcam_fmj_127_0_0_1_zone_2_headphone_override',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
